# NumPy-an-lise-num-rica-eficiente-com-Python

./: .gitignore  numpy_class_1.py  numpy_class_1_challenge.py  numpy_class_2.py  pyproject.toml
